Revision history for CGI-Info

0.57
	--search-engine and --mobile didn't work
	Less harsh SQL injection tests, there were too many false positives

0.56	Sun Aug 16 20:05:27 EDT 2015
	Catch XML read failures
	Twitterbot is a robot
	Catch more injection attempts

0.55	Thu Jun 11 17:33:10 EDT 2015
	protocol() - Don't warn when not running as a CGI script
	Added more explicit catching of XSS and SQL injection attempts

0.54	Wed Jun  3 13:10:59 EDT 2015
	Fix --tablet option
	protocol() - Warn if the calling protocol can't be determined
	Fix protocol() on OpenBSD, Solaris and NetBSD
	Ensure that the temporary directory is writeable, otherwise tests will
		fail

0.53	Sat May 30 16:00:49 EDT 2015
	Remove implicit assumption of the build directory

0.52	Sat May 30 08:13:28 EDT 2015
	Fix problem where mobile Chrome claimed it's a robot when data
		compression is enabled
	Ensure + is handled in parameters when encoded as %2B
	cgi_host_url could sometimes give http:// instead of https://
	Set minimum version as 5.6.1 since we use the 3 argument open()
	When running outside CGI, allow one of --tablet, --search-engine,
		--mobile and --robot to mimick those agents.
	is_mobile: include code from detectmobilebrowsers.com

0.51	Fri Jan  2 20:34:46 EST 2015
	Fix breakage on older Perls

0.50	Fri Jan  2 10:37:56 EST 2015
	Put is_mobile in the cache
	Added 'search' to the list of return values from browser_type()
	Added t/used.t
	Don't load cleaning modules when no arguments are given
	Don't use String::EscapeCage - RT99598, String::Clean::XSS should
		suffice

0.49	Fri Nov  7 17:16:25 EST 2014
	Ensure different agents from the same IP don't clash in the cache
	Restore alloing new() arguments to be a reference

0.48	Sun Oct 19 20:35:56 EDT 2014
	Incorporated patch-1 from https://github.com/szabgab/CGI-Info
	Consider Majestic12 to be a search engine
	Only load File::Basename when needed
	Use String::EscapeCage to taint and grab values
	Added param message
